# dart

./: .clang-format  .gitignore  CMakeLists.txt  package.xml
src/: tracker.cpp  tracker.h
src/depth_sources/: depth_source.h  depthsense_depth_source.h  image_depth_source.h  k2_depth_source.h  openni_depth_source.cpp  pango_depth_source.h  ros_depth_source.cpp  ros_depth_source.h
src/geometry/: grid_3d.h
src/mesh/: mesh_splat.cpp
src/model/: host_only_model.cpp  host_only_model.h  mirrored_model.cpp  model.cpp  model.h
src/optimization/: optimizer.cpp  optimizer.h  prediction_renderer.cpp  prediction_renderer.h
src/optimization/kernels/: obsToMod.cu
src/point_cloud_src/: point_cloud_src.h
src/pose/: pose.cpp  pose.h  pose_reduction.h
src/util/: colorize_kinect2_point_cloud.cu  colorize_kinect2_point_cloud.h  cuda_utils.h  dart_io.cpp  mirrored_memory.h
src/visualization/: data_association_viz.cu  data_association_viz.h
