<package>
  <name>dart</name>
  <version>0.0.1</version>
  <description>dart</description>
  <license>GPL</license>
  <author>Tanner</author>
  <maintainer email="jissac@nvidia.com">Jan Issac</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
